# container-ldap

./: .dockerignore  .env.ldap-server.example  .env.listener.example  .env.univention-openldap.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .yamllint  CAcert.pem  CHANGELOG.md  CHANGELOG.rst  Dockerfile.health-check  INTERVIEW_ASSESSMENT.md  Pipfile  README.md  SETUP_NOTES.md  ci-build-script.py  ci-publish-script.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  generate-secrets.sh  ldap-health-check.py  local.ldif  nats.dev.conf  pyproject.toml  pytest.ini  renovate.json5  requirements-health-check.txt  sonar-project.properties
.config/: copier-answers.helm-chart-unittests-ldap-notifier.yaml  copier-answers.helm-chart-unittests-ldap-server.yaml
.gitlab/: CODEOWNERS
docker/ldap/: Dockerfile  Dockerfile_deb_builder  container-entrypoint.sh  ucr-light-filter
docker/ldap-notifier/: Dockerfile  entrypoint.sh  run-notifier.sh
docker/ldap-producer/: Dockerfile
docker/ldap-server/: 40-self-service-acl.sh  50-entrypoint.sh  60-sync-ldap-indexes.sh  Dockerfile  Pipfile  README.md  base.ldif  evaluate_database_init.py  ldap-index-statefile.json  sync-ldap-indexes.py  sync_ldap_indexes.py  ucr-light-filter  ucr_light_filter.py
docker/ldap-update-univention-object-identifier/: ldap-update-univention-object-identifier.py
docker/ldif-producer/: Dockerfile
docker/leader-elector/: Dockerfile  leader_elector.py
docker/notifier/: .dockerfilelintrc  Dockerfile  run-notifier.sh
docker/testrunner/: Dockerfile  entrypoint.sh
docs/: about.md  changelog.rst  conf.py  environment-variables.md  extensions.md  extensions.rst  index.rst  initial-content.md  initial-content.rst  ldif_producer_activity_diagram.puml  ldif_producer_architecture.md  saml.md  spelling_wordlist
docs/decisions/: 0001-use-architectural-decision-records-adrs.md  0002-use-multiple-pods.md  0003-bundle-portal-extensions-from-image.md  0004-tests-use-pytest-and-ldap3.md
helm/: test-values.yaml  values-ldap-notifier.yaml.example  values-ldap-server.yaml.example
helm-unittests/: README.md  conftest.py
helm/ldap-notifier/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/ldap-server/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  linter_values_helm_unit_tests.yaml  values.yaml
helm/ldap-server-devops/: Chart.yaml  linter_values.yaml  values.yaml
helm/ldap-server-v2/: README.md  values.yaml
images/: build_image.sh  setup_initial_ldif.sh  slapd.conf_current  solve.py  ucr
images/ldap/: Dockerfile  Dockerfile_deb_builder  container-entrypoint.sh  solve.py  sources.list  ucr-light-filter  ucs-sso.univention-organization.intranet.xml
images/listener/: Dockerfile  entrypoint.sh  sources.list
images/notifier/: Dockerfile  entrypoint.sh  fake.sh  sources.list
images/pre-commit/: Dockerfile
images/univention-openldap/: Administrator_user.ldif  Dockerfile  container-entrypoint.sh  solve.py  sources.list
integration-test/: .pylintrc  Dockerfile  Dockerfile_SAML_IdP  Dockerfile_SAML_SP  Dockerfile_SIMPLE_SAML  build_images.sh  docker-compose.yaml  nginx.conf  requirements.txt  server.crt  server.pem
integration-test/resources/: Ldap.robot
integration-test/tests/: ldap_test.sh
ldif_producer/: pyproject.toml
ldif_producer/univention/provisioning/ldif_producer/: config.py  controller.py  port.py  slapdsocklistener.py
ldif_producer/univention/provisioning/ldif_producer/socket_adapter/: ldap_handler.py  server.py  slapdsocklistener.py
ldif_producer/univention/provisioning/nats_adapter/: __init__.py
lib/: ci_docker.py  ci_log.py  ci_vars.py  ci_version.py
listener/: 15_ucs-online-version.list  Dockerfile
scripts/: ldap-create-fake-users.py  ldap-update-univention-object-identifier.py  requirements.txt
ssl/: dh_2048.pem
ssl/certs/: cert.pem
ssl/secret/: private.key
test/: conftest.py  test_portal_extensions.py
tests/: README.md  base-defaults.conf  base.conf  conftest.py  ldap-data.mdb  test_connection.py  test_portal_extensions.py
tests/helm_unit/: conftest.py  test_deployment.py  test_statefulset.py  test_statefulset_ldif_producer.py  test_statefulset_resources.py
tests/integration/: conftest.py  test_basics.py  test_connection.py  test_ldap_index_sync.py  test_portal_extensions.py
tests/unit/: __init__.py  conftest.py  create_user_socket_requests.json  delete_requests_test_data.json  dev-env-requests.json  (+11 more)
vanilla/: README.md  docker-compose.yaml  entrypoint.sh  seed.ldif  slapd.conf
(+145 files in other folders)
