[tool.poetry]
name = "nubus-ldap-metapackage"
version = "0.1.0"
description = "Meta-package meant for local development setup"
authors = [
    "Univention GmbH <packages@univention.de>",
    "Johannes Lohmer <lohmer@univention.de>",
]
license = "GNU Affero General Public License v3"

[tool.poetry.dependencies]
python = "^3.10"
nubus-ldif-producer = { path = "./ldif_producer/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "7.4"
pytest-asyncio = "0.23"
pytest-profiling = "1.7"
pytest-cov = "5.0"
ldap3 = "^2.9.1"

[[tool.poetry.source]]
name = "nubus-provisioning"
url = "https://git.knut.univention.de/api/v4/projects/882/packages/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "gitlab-ldap0"
url = "https://git.knut.univention.de/api/v4/projects/1112/packages/pypi/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "gitlab-slapdsock"
url = "https://git.knut.univention.de/api/v4/projects/1111/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
