[tool.poetry]
name = "nubus-provisioning-consumer"
version = "0.1.0"
description = "Provisioning consumer library"
authors = [
    "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
packages = [
    { include = "univention/provisioning/consumer", from = "." },
    { include = "univention/provisioning/models", from = "." }
]

[tool.poetry.dependencies]
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python = "^3.7"
aiohttp = "^3.8.5"
slapdsock = "^1.3.2"

[tool.poetry.scripts]
consumer = "univention.provisioning.consumer.example_client.main:run"
slapdsocklistener = "client.slapdsocklistener:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "4.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gitlab-python-ldap0"
url = "https://git.knut.univention.de/api/v4/projects/1112/packages/pypi"
priority = "supplemental"

[[tool.poetry.source]]
name = "gitlab-python-slapdsock"
url = "https://git.knut.univention.de/api/v4/projects/1111/packages/pypi"
priority = "supplemental"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
